--- a/web/html/dynamo/css/inventory.css
+++ b/web/html/dynamo/css/inventory.css
@@ -74,7 +74,6 @@
 
 #graph {
     width: 100%;
-    height: 100%;
 }
 
 #legendCont {
@@ -86,4 +85,12 @@
 
 #legend {
     width: 100%;
+}
+
+#graph .axis path,
+#graph .axis line {
+    fill: none;
+    stroke: #000;
+    stroke-width: 0.1;
+    shape-rendering: crispEdges;
 }
