--- a/web/html/css/inventory.css
+++ b/web/html/css/inventory.css
@@ -7,7 +7,7 @@
 
 #selections {
     width: 100%;
-    height: 200px;
+    height: 300px;
 }
 
 #dataSelection {
@@ -17,13 +17,13 @@
 }
 
 .menuTitle {
-    height: 15%;
+    height: 30px;
     margin-left: 5px;
 }
 
 #dataTypeCont {
     width: 100%;
-    height: 85%;
+    height: 270px;
 }
 
 #constraints {
@@ -35,24 +35,28 @@
 
 #constraintsLeft {
     width: 35%;
-    height: 85%;
+    height: 270px;
     float: left;
 }
 
 #constraintsRight {
     width: 65%;
-    height: 85%;
+    height: 270px;
     float: left;
 }
 
 .constraintType {
-    height: 20%;
+    height: 35px;
     margin-left: 5px;
 }
 
 .constraintInput {
     width: 100%;
-    height: 20%;
+    height: 35px;
+}
+
+.constraint {
+    width: 140px;
 }
 
 #commitView {
@@ -93,4 +97,14 @@
     stroke: #000;
     stroke-width: 0.1;
     shape-rendering: crispEdges;
+}
+
+#graph .velem .mean,
+#legend .mean {
+    fill: steelblue;
+}
+
+#graph .velem .rms,
+#legend .rms {
+    fill: #1d3549;
 }
