--- a/web/html/css/detox.css
+++ b/web/html/css/detox.css
@@ -32,49 +32,55 @@ div.runLink {
 }
 
 #main {
+    margin-top: 10px;
     width: 100%;
 }
 
 #partitions {
     width: 100%;
-    height: 40px;
+    height: 38px;
+    overflow: visible;
 }
 
-.partitionTab {
-    background-color: #aaaaaa;
-    width: 200px;
+#partitions .partitionTab {
+    background-color: #cccccc;
+    width: 148px;
     height: 20px;
     float: left;
     text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    text-decoration: underline;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    border-width: 2px 0 0 2px;
+    border-style: solid;
+    border-color: #999999;
+    margin-bottom: 2px;
+    cursor: pointer;
 }
 
-.selectedPartition {
-    background-color: #ffaaaa;
+#partitions div.selected {
+    background-color: white;
     text-decoration: none;
+    padding-bottom: 10px;
+    margin-bottom: 0;
     cursor: auto;
 }
 
-#graphs {
-    width: 100%;
-    border: 2px solid #cccccc;
+#partitions div.last {
+    border-right: 2px solid #999999;
 }
 
-#summaryPanel {
+#contents {
     width: 100%;
+    border-width: 2px 2px 2px 2px;
+    border-style: solid;
+    border-color: #999999;
+}
+
+#summary {
+    margin: 0 5% 0 5%;
+    width: 90%;
     height: 600px;
-}
-
-#summaryGraphContainer {
-    margin: 0 10% 0 10%;
-    width: 80%;
-    height: 500px;
-}
-
-#summaryGraph {
-    width: 100%;
-    height: 100%;
 }
 
 rect.outline {
@@ -83,15 +89,23 @@ rect.outline {
 }
 
 .protect {
-    fill: #aaffaa;
+    fill: #4444ff;
 }
 
 .keep {
-    fill: #aaaaff;
+    fill: #44ff44;
 }
 
 .delete {
-    fill: #ffaaaa;
+    fill: #88ffff;
+}
+
+.protectPrev {
+    fill: #aaaaff;
+}
+
+.keepPrev {
+    fill: #aaffaa;
 }
 
 .graphAxis {
@@ -129,17 +143,39 @@ rect.outline {
     margin-left: 25px;
 }
 
-.protected {
-    width: 250px;
-    fill: green;
+article.siteDetails {
+    margin: 0 5% 0 5%;
+    width: 90%;
+    border-top: 2px solid #999999;
 }
 
-.keep {
-    width: 250px;
-    fill: blue;
+h3.siteName {
+    text-align: left;
+    font-size: 18px;
+    font-weight: 500;
+    margin: 0 0 0 0;
+    padding: 10px 0 10px 0;
 }
 
-.delete {
-    width: 250px;
-    fill: red;
+article.siteDetails table {
+    border-collapse: collapse;
+    border: 1px solid #999999;
+    font-size: 12px;
+}
+
+article.siteDetails table tr,th,td {
+    border: 1px solid #999999;
+}
+
+table.siteTableHeader th {
+    background-color: #a31f34;
+    color: white;
+}
+
+table.siteTable tr.odd {
+    background-color: #c2c0bf;
+}
+
+#footer {
+    width: 100%;
 }
