--- a/web/html/css/detox.css
+++ b/web/html/css/detox.css
@@ -80,7 +80,12 @@ div.runLink {
 #summary {
     margin: 0 5% 0 5%;
     width: 90%;
-    height: 600px;
+    height: 800px;
+}
+
+#summaryGraphBox {
+    width: 100%;
+    height: 100%;
 }
 
 rect.outline {
