--- a/web/html/css/detox.css
+++ b/web/html/css/detox.css
@@ -2,13 +2,13 @@
     float: left;
 }
 
-#run {
+#cycle {
     width: 40%;
     height: 100%;
     float: right;
 }
 
-#runHeader {
+#cycleHeader {
     font-size: 30px;
     width: 100%;
     height: 50%;
@@ -16,17 +16,17 @@
     margin: 0 0 0 0;
 }
 
-#runNav {
+#cycleNav {
     height: 50%;
     float:right;
 }
 
-div.runLink {
+div.cycleLink {
     float: right;
     width: 50px;
 }
 
-#runJump {
+#cycleJump {
     float: right;
     width: 200px;
 }
@@ -152,6 +152,7 @@ article.siteDetails {
     margin: 0 5% 0 5%;
     width: 90%;
     border-top: 2px solid #999999;
+    margin-bottom: 20px;
 }
 
 h3.siteName {
@@ -160,12 +161,24 @@ h3.siteName {
     font-weight: 500;
     margin: 0 0 0 0;
     padding: 10px 0 10px 0;
+    width: 90%;
+    height: 30px;
+    float: left;
+}
+
+.toTop {
+    width: 10%;
+    height: 30px;
+    margin: 0 0 0 0;
+    padding: 10px 0 10px 0;
+    float: left;
+    text-align: right;
+    cursor: pointer;
 }
 
 .siteTableBox {
+    clear: both;
     width: 100%;
-    height: 700px;
-    margin-bottom: 20px;
     border: 1px solid black;
 }
 
