added target occupancy line

--- a/web/html/css/detox.css
+++ b/web/html/css/detox.css
@@ -118,6 +118,11 @@ rect.outline {
     stroke-width: 0.5;
 }
 
+.refMarker {
+    stroke: black;
+    stroke-width: 0.2;
+}
+
 .sitePanel {
     width: 25%;
     height: 400px;
