--- a/web/html/css/detox.css
+++ b/web/html/css/detox.css
@@ -11,24 +11,26 @@
 #cycleHeader {
     font-size: 30px;
     width: 100%;
-    height: 50%;
+    height: 70%;
     text-align: right;
     margin: 0 0 0 0;
 }
 
-#cycleNav {
-    height: 50%;
+#cycles {
+    width: 100%;
+    height: 30%;
     float:right;
+    text-align: right;
 }
 
 div.cycleLink {
     float: right;
-    width: 50px;
+    width: 15%;
 }
 
 #cycleJump {
     float: right;
-    width: 200px;
+    width: 70%;
 }
 
 #main {
