--- a/web/html/css/dynamo.css
+++ b/web/html/css/dynamo.css
@@ -14,12 +14,14 @@ body {
     height: 100px;
     background-color: #666666;
     color: white;
-    padding: 5px 0 0 0;
+    padding: 5px 5px 0 5px;
 }
 
 #pageTitle {
     font-size: 40px;
+    width: 45%;
     height: 80px;
     float: left;
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
