--- a/web/html/css/detox.css
+++ b/web/html/css/detox.css
@@ -52,6 +52,7 @@ div.cycleLink {
 }
 
 #partitions {
+    clear: both;
     width: 100%;
     height: 38px;
     overflow: visible;
@@ -151,6 +152,12 @@ line.refMarker.target {
 .graphAxis {
     stroke: black;
     stroke-width: 0.5;
+}
+
+#deletionDetails {
+    width: 90%;
+    margin: 20px 5% 20px 5%;
+    border-top: 2px solid #999999;
 }
 
 .sitePanel {
