--- a/web/html/dynamo/css/detox.css
+++ b/web/html/dynamo/css/detox.css
@@ -1,3 +1,7 @@
+#header {
+    height: 130px;
+}
+
 #partitionName {
     float: left;
 }
@@ -11,7 +15,7 @@
 #cycleHeader {
     font-size: 25px;
     width: 100%;
-    height: 40%;
+    height: 30%;
     text-align: right;
     margin: 0 0 0 0;
 }
@@ -25,7 +29,7 @@
 
 #cycles {
     width: 100%;
-    height: 30%;
+    height: 40%;
     float:right;
     text-align: right;
 }
@@ -46,9 +50,34 @@ div.cycleLink {
 }
 
 #datasetSearchNav {
-    width: 100%;
-    height: 40px;
+    margin-left: 65%;
+    width: 35%;
+    height: 35px;
     text-align: right;
+}
+
+div.datasetSearchIndex {
+    width: 20%;
+    height: 25px;
+    float: left;
+}
+
+div.datasetSearchInputs {
+    width: 80%;
+    height: 25px;
+    float: left;
+}
+
+.datasetSearch {
+    width: 80%;
+    height: 18px;
+    text-align: left;
+    font-size: 16px;
+}
+
+.datasetSearchButton {
+    width: 15%;
+    height: 22px;
 }
 
 #partitions {
@@ -127,10 +156,6 @@ rect.protectPrev, circle.protectPrev {
 
 rect.keepPrev, circle.keepPrev {
     fill: #aaffaa;
-}
-
-rect.searched, circle.searched {
-    fill: #ff00ff;
 }
 
 line.refMarker {
