--- a/web/html/dynamo/dynamo/css/dealermon.css
+++ b/web/html/dynamo/dynamo/css/dealermon.css
@@ -77,6 +77,16 @@ body {
     height: 840px;
 }
 
+#instructionbox {
+    position: absolute;
+    left: 58%;
+;
+    height:10px;
+
+
+
+}
+
 #GaugeBox {
     width: 100%;
     height: 220px;
