--- a/web/html/dynamo/dynamo/css/dynamo.css
+++ b/web/html/dynamo/dynamo/css/dynamo.css
@@ -20,10 +20,18 @@ body {
 #pageTitle {
     font-size: 40px;
     width: 45%;
-    height: 80px;
+    height: 60px;
     float: left;
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+#error {
+    font-size: 16px;
+    width: 60%;
+    height: 20px;
+    float:left;
+    color: pink;
 }
 
 table {
