--- a/web/css/detox/monitor.css
+++ b/web/css/detox/monitor.css
@@ -27,9 +27,16 @@
     margin: 0 0 0 0;
 }    
 
+#cycleAlert {
+    width: 100%;
+    height: 20%;
+    text-align: right;
+    margin: 0 0 0 0;
+}    
+
 #cycles {
     width: 100%;
-    height: 40%;
+    height: 20%;
     float:right;
     text-align: right;
 }
