First version of phedex like activity plots.

--- a/web/css/transfers/monitor.css
+++ b/web/css/transfers/monitor.css
@@ -1,3 +1,18 @@
+.labeled {
+    font-size: 0.9em;
+    -webkit-appearance: none;
+}
+.go {
+    font-size: 0.9em;
+    background-color: darkred;
+    color: white;
+    -webkit-appearance: none;
+}
+
+optgroup {
+    font-size: 0.9em;
+}
+
 #transferList {
     width: 100%;
     border-collapse: collapse;
