--- a/web/css/transfers/monitor.css
+++ b/web/css/transfers/monitor.css
@@ -1,3 +1,14 @@
+#wrap {
+    width: 100%;
+    margin: 0 auto;
+}
+.box{
+    float: left;
+    margin: 0 auto;
+    margin-top: 0.8em;
+    margin-left: 0.5em;
+}
+
 .labeled {
     font-size: 0.9em;
     -webkit-appearance: none;
