--- a/web/css/transfers/monitor.css
+++ b/web/css/transfers/monitor.css
@@ -2,8 +2,28 @@
     width: 100%;
     margin: 0 auto;
 }
+.logobox{
+    float: right;
+    width: 100px;
+    margin: 0 auto;
+    margin-top: 0.8em;
+    margin-left: 0.5em;
+}
+.restbox{
+    float: left;
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 0.8em;
+    margin-left: 0.5em;
+}
 .box{
     float: left;
+    margin: 0 auto;
+    margin-top: 0.8em;
+    margin-left: 0.5em;
+}
+.nofloatbox{
+    //float: left;
     margin: 0 auto;
     margin-top: 0.8em;
     margin-left: 0.5em;
